proposal: Initial version of the project proposal.

--- a/project_proposal/Makefile
+++ b/project_proposal/Makefile
@@ -1,4 +1,12 @@
-all: project_proposal.pdf
+all: project_proposal.pdf clean_aux
 
 %.pdf: %.tex
-	texi2pdf -c $<
+	pdflatex project_proposal.tex
+	bibtex project_proposal
+	pdflatex project_proposal.tex
+	pdflatex project_proposal.tex
+
+.PHONY: clean_aux
+
+clean_aux:
+	rm -f *.aux *.log *.out *.toc *.bbl *.blg *.dvi *.rtf *.bcf *-blx.bib *.run.xml sections/*.aux
